--- a/templates/book/favorite_books.html
+++ b/templates/book/favorite_books.html
@@ -14,9 +14,9 @@
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card h-100">
             {% if book.thumbnail %}
-              <img src="{{ book.thumbnail.url }}" class="card-img-top" alt="{{ book.title }}" style="height: 200px; object-fit: cover;">
+              <img src="{{ book.thumbnail.url }}" class="card-img-top" alt="{{ book.title }}" style="height: 300px; object-fit: contain; background-color: #f8f9fa;">
             {% else %}
-              <div class="card-img-top bg-light d-flex align-items-center justify-content-center" style="height: 200px;">
+              <div class="card-img-top bg-light d-flex align-items-center justify-content-center" style="height: 300px;">
                 <i class="fas fa-book fa-3x text-muted"></i>
               </div>
             {% endif %}
